chore: up to Java 17